--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="com.phonegap.plugins.binaryfilewritter"
+    id="com.phonegap.plugins.binaryfilewriter"
     version="2.0.0">
 
     <name>BinaryFileWriter</name>
